Refactor `getCurrentUserId` into `Credentials` utility class, enhance `HomeController` and Thymeleaf dashboard template
- Moved `getCurrentUserId` logic to a new `Credentials` utility class for reuse.
- Refactored `DeckController` and `CardController` to utilize `Credentials.getCurrentUserId`.
- Enhanced `HomeController` to fetch decks and cards for the dashboard.
- Improved Thymeleaf `dashboard.html` with new styling, modal support, and dynamic content.